adds completed homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+    <header id="MainImage">
+        <div class="NavBar">
+            <div class="Logo">
+                <img class="NavBarLogo" src="./images/hipsterlogo_white.png" alt="A, B ,C logo in white" />
+            </div>
+            <div class="Menu">
+                <a href="#MainImage">HOME</a>
+                <a href="#About">ABOUT</a>
+                <a href="#Services">SERVICES</a>
+                <a href="#Portfolio">PORTFOLIO</a>
+                <a href="#Contact">CONTACT</a>
+            </div>       
+        </div>
+        <div class="TextOverlay1">
+            <button class="LeftButton"><img class="LeftArrow" src="./images/arrow_back.svg" alt="Left arrow" /></button>
+            <button class="RightButton"><img class="RightArrow" src="./images/arrow_forward.svg" alt="Right arrow" /></button>
+        </div>
+        <div class="TextOverlay2">
+            <h1>We can change<br />your digital world</h1>
+            <h6>Bold enough to blow a hole in your next marketing campaign.</h6>
+        </div>        
+    </header>
+<section id="About">
+
+</section>
+<section id="Services">
+
+</section>
+<section id="Portfolio">
+
+</section>
+<section id="Contact">
+
+</section>
 <body>
     
 </body>
