adds corrected About section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Creative Agency Clone</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+<body>
     <header id="MainImage">
         <div class="NavBar">
             <div class="Logo">
@@ -29,19 +30,61 @@
             <h6>Bold enough to blow a hole in your next marketing campaign.</h6>
         </div>        
     </header>
-<section id="About">
+    <section id="About">
+        <div class="AboutCard">
+            <img id="Desk1" src="./images/desk1.jpeg" alt="Image of a desk">
+        </div>
+        <div class="AboutCard">
+            <div class="AboutCardText">
+                <h2>Creative<br />& fresh</h2>
+                <h6>Our digital agency</h6>
+                <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
+                <button>VIEW PORTFOLIO</button>
+            </div>
+        </div>
+        <br />
+        <div class="AboutCard">
+            <div class="AboutCardText">
+                <h2>Hip<br />& funky</h2>
+                <h6>We try new things</h6>
+                <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
+                <button href="#Services">OUR SERVICES</button>
+            </div>
+        </div>
+        <br />
+        <div class="AboutCard">
+            <img id="Desk1" src="./images/desk3.jpeg" alt="">
+        </div>
+        <div class="AboutFooter">
+            <div class="AboutFooterCard">
+                <h2>342</h2>
+                <h6>Cups of coffee</h6>
+            </div>
+            <div class="AboutFooterCard">
+                <h2>756</h2>
+                <h6>Bicycle kilometres</h6>
+            </div>
+            <div class="AboutFooterCard">
+                <h2>419</h2>
+                <h6>Brainstorm sessions</h6>
+            </div>
+            <div class="AboutFooterCard">
+                <h2>284</h2>
+                <h6>Video hours</h6>
+            </div>
+        </div>
+    </section>
+    <section id="Services">
 
-</section>
-<section id="Services">
+    </section>
+    <section id="Portfolio">
 
-</section>
-<section id="Portfolio">
+    </section>
+    <section id="Contact">
 
-</section>
-<section id="Contact">
 
-</section>
-<body>
+    </section>
+
     
 </body>
 </html>
