adds to services

--- a/index.html
+++ b/index.html
@@ -75,7 +75,43 @@
         </div>
     </section>
     <section id="Services">
-
+        <div class="Service-container">
+            <div class="ServiceCard-container">
+                <img id="Desk1" src="./images/desk2.jpeg" alt="Image of a desk">
+            </div>
+            <div class="ServiceCard-container">
+                <div class="AboutCardText">
+                    <h2>Things<br />we do</h2>
+                    <h6>We exist to create</h6>
+                    <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
+                    <button>GET IN TOUCH</button>
+                </div>
+            </div>
+        </div>
+        
+        <div class="ServiceCards">
+            <div class="ServiceCard">
+                <div class="ServiceCardText one">
+                    <img src="./images/interface_radial_icon.svg" alt="radial interface icon">
+                    <h2>Branding</h2>
+                    <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha.                  </p>
+                </div>
+            </div>
+            <div class="ServiceCard">
+                <div class="ServiceCardText two">
+                    <img src="./images/microwave_icon.svg" alt="microwave icon">
+                    <h2>Web Design</h2>
+                    <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
+                </div>
+            </div>
+            <div class="ServiceCard">
+                <div class="ServiceCardText three">
+                    <img src="./images/picture_icon.svg" alt="picture icon">
+                    <h2>Graphic Design</h2>
+                    <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="Portfolio">
 
