adds completed services section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                 </div>
             </div>
         </div>
-        
         <div class="ServiceCards">
             <div class="ServiceCard">
                 <div class="ServiceCardText one">
@@ -112,6 +111,17 @@
                 </div>
             </div>
         </div>
+        <div class="ServiceFooter">
+            <div class="ServiceFooterCard">
+                <h2>Our clients<br />love our work</h2>
+                <h6>But don't just take our word for it...</h6>
+            </div>
+            <div class="ServiceFooterCard">
+                <div class="AnimatedQuote"></div>
+                <div class="AnimatedName"></div>
+            </div>
+        </div>
+    </div>
     </section>
     <section id="Portfolio">
 
