adds portfolio section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,34 @@
     </div>
     </section>
     <section id="Portfolio">
-
+        <div class="PortfolioContainer">
+            <div class="PortfolioCard">
+                <h2>Latest<br />creations</h2>
+                <h6>We make beautiful things</h6>
+                <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking.</p>
+            </div>
+            <div class="PortfolioCard">
+                <img src="./images/cloud_overlook_port1-small.jpg" alt="man overlooking clouds">
+            </div>
+            <div class="PortfolioCard">
+                <img src="./images/woman_hand_port2-small.jpg" alt="woman behind glass holding up hand">
+            </div>
+            <div class="PortfolioCard">
+                <img src="./images/piano_port3-small.jpg" alt="hands at a piano">
+            </div>
+            <div class="PortfolioCard">
+                <img src="./images/cityscape_port4-small.jpg" alt="cityscape">
+            </div>
+            <div class="PortfolioCard">
+                <img src="./images/night_sky_port5-small.jpg" alt="silhouette against the night sky">
+            </div>
+            <div class="PortfolioCard">
+                <img src="./images/sunny_building_port6-small.jpg" alt="a sunny building">
+            </div>
+            <div class="PortfolioCard">
+                <img src="./images/basketball_hoop_port7-small.jpg" alt="basketball hoop">
+            </div>
+        </div>
     </section>
     <section id="Contact">
 
