--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header id="MainImage">
-        <div class="NavBar">
-            <div class="Logo">
-                <img class="NavBarLogo" src="./images/hipsterlogo_white.png" alt="A, B ,C logo in white" />
+    <header id="mainimage">
+        <div class="navbar">
+            <div class="logo">
+                <img class="navbarlogo" src="./images/hipsterlogo_white.png" alt="A, B ,C logo in white" />
             </div>
-            <div class="Menu">
-                <a href="#MainImage">HOME</a>
-                <a href="#About">ABOUT</a>
-                <a href="#Services">SERVICES</a>
-                <a href="#Portfolio">PORTFOLIO</a>
-                <a href="#Contact">CONTACT</a>
+            <div class="menu">
+                <a href="#mainimage">HOME</a>
+                <a href="#about">ABOUT</a>
+                <a href="#services">SERVICES</a>
+                <a href="#portfolio">PORTFOLIO</a>
+                <a href="#contact">CONTACT</a>
             </div>       
         </div>
-        <div class="TextOverlay1">
-            <button class="LeftButton"><img class="LeftArrow" src="./images/arrow_back.svg" alt="Left arrow" /></button>
-            <button class="RightButton"><img class="RightArrow" src="./images/arrow_forward.svg" alt="Right arrow" /></button>
+        <div class="textoverlay1">
+            <button class="leftbutton"><img class="leftarrow" src="./images/arrow_back.svg" alt="Left arrow" /></button>
+            <button class="rightbutton"><img class="rightarrow" src="./images/arrow_forward.svg" alt="Right arrow" /></button>
         </div>
-        <div class="TextOverlay2">
+        <div class="textoverlay2">
             <h1>We can change<br />your digital world</h1>
             <h6>Bold enough to blow a hole in your next marketing campaign.</h6>
         </div>        
     </header>
-    <section id="About">
-        <div class="AboutCard">
-            <img id="Desk1" src="./images/desk1.jpeg" alt="Image of a desk">
+    <section id="about">
+        <div class="card">
+            <img id="desk1" src="./images/desk1.jpeg" alt="Image of a desk">
         </div>
-        <div class="AboutCard">
-            <div class="AboutCardText">
+        <div class="card">
+            <div class="card__content">
                 <h2>Creative<br />& fresh</h2>
                 <h6>Our digital agency</h6>
                 <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
@@ -43,44 +43,44 @@
             </div>
         </div>
         <br />
-        <div class="AboutCard">
-            <div class="AboutCardText">
+        <div class="card">
+            <div class="card__content">
                 <h2>Hip<br />& funky</h2>
                 <h6>We try new things</h6>
                 <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
-                <button href="#Services">OUR SERVICES</button>
+                <button href="#services">OUR SERVICES</button>
             </div>
         </div>
         <br />
-        <div class="AboutCard">
-            <img id="Desk1" src="./images/desk3.jpeg" alt="">
+        <div class="card">
+            <img id="desk1" src="./images/desk3.jpeg" alt="">
         </div>
-        <div class="AboutFooter">
-            <div class="AboutFooterCard">
+        <div class="aboutend">
+            <div class="aboutend__card">
                 <h2>342</h2>
                 <h6>Cups of coffee</h6>
             </div>
-            <div class="AboutFooterCard">
+            <div class="aboutend__card">
                 <h2>756</h2>
                 <h6>Bicycle kilometres</h6>
             </div>
-            <div class="AboutFooterCard">
+            <div class="aboutend__card">
                 <h2>419</h2>
                 <h6>Brainstorm sessions</h6>
             </div>
-            <div class="AboutFooterCard">
+            <div class="aboutend__card">
                 <h2>284</h2>
                 <h6>Video hours</h6>
             </div>
         </div>
     </section>
-    <section id="Services">
-        <div class="Service-container">
-            <div class="ServiceCard-container">
-                <img id="Desk1" src="./images/desk2.jpeg" alt="Image of a desk">
+    <section id="services">
+        <div class="servicecard__container">
+            <div class="card">
+                <img id="desk1" src="./images/desk2.jpeg" alt="Image of a desk">
             </div>
-            <div class="ServiceCard-container">
-                <div class="AboutCardText">
+            <div class="card">
+                <div class="card__content">
                     <h2>Things<br />we do</h2>
                     <h6>We exist to create</h6>
                     <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
@@ -88,102 +88,102 @@
                 </div>
             </div>
         </div>
-        <div class="ServiceCards">
-            <div class="ServiceCard">
-                <div class="ServiceCardText one">
+        <div class="servicecard__subcontainer">
+            <div class="service__card">
+                <div class="card__content card--one">
                     <img src="./images/interface_radial_icon.svg" alt="radial interface icon">
                     <h2>Branding</h2>
                     <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha.                  </p>
                 </div>
             </div>
-            <div class="ServiceCard">
-                <div class="ServiceCardText two">
+            <div class="service__card">
+                <div class="card__content card--two">
                     <img src="./images/microwave_icon.svg" alt="microwave icon">
                     <h2>Web Design</h2>
                     <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
                 </div>
             </div>
-            <div class="ServiceCard">
-                <div class="ServiceCardText three">
+            <div class="service__card">
+                <div class="cardcontent--servicetext card--three">
                     <img src="./images/picture_icon.svg" alt="picture icon">
                     <h2>Graphic Design</h2>
                     <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking disruptive user experience iPad social media angel investor alpha. Social proof lean startup alpha scrum project non-disclosure agreement.</p>
                 </div>
             </div>
         </div>
-        <div class="ServiceFooter">
-            <div class="ServiceFooterCard">
+        <div class="service__end">
+            <div class="serviceend__card">
                 <h2>Our clients<br />love our work</h2>
                 <h6>But don't just take our word for it...</h6>
             </div>
-            <div class="ServiceFooterCard">
-                <div class="AnimatedQuote"></div>
-                <div class="AnimatedName"></div>
+            <div class="serviceend__card">
+                <div class="animatedquote"></div>
+                <div class="animatedname"></div>
             </div>
         </div>
     </div>
     </section>
-    <section id="Portfolio">
-        <div class="PortfolioContainer">
-            <div class="PortfolioCard">
+    <section id="portfolio">
+        <div class="portfolio__container">
+            <div class="portfolio__card">
                 <h2>Latest<br />creations</h2>
                 <h6>We make beautiful things</h6>
                 <p>Focus infographic venture business model canvas gamification ecosystem. Business plan gamification user experience low hanging fruit twitter. Metrics research & development market paradigm shift growth hacking.</p>
             </div>
-            <div class="PortfolioCard">
+            <div class="portfolio__card">
                 <img src="./images/cloud_overlook_port1-small.jpg" alt="man overlooking clouds">
             </div>
-            <div class="PortfolioCard">
+            <div class="portfolio__card">
                 <img src="./images/woman_hand_port2-small.jpg" alt="woman behind glass holding up hand">
             </div>
-            <div class="PortfolioCard">
+            <div class="portfolio__card">
                 <img src="./images/piano_port3-small.jpg" alt="hands at a piano">
             </div>
-            <div class="PortfolioCard">
+            <div class="portfolio__card">
                 <img src="./images/cityscape_port4-small.jpg" alt="cityscape">
             </div>
-            <div class="PortfolioCard">
+            <div class="portfolio__card">
                 <img src="./images/night_sky_port5-small.jpg" alt="silhouette against the night sky">
             </div>
-            <div class="PortfolioCard">
+            <div class="portfolio__card">
                 <img src="./images/sunny_building_port6-small.jpg" alt="a sunny building">
             </div>
-            <div class="PortfolioCard">
+            <div class="portfolio__card">
                 <img src="./images/basketball_hoop_port7-small.jpg" alt="basketball hoop">
             </div>
         </div>
     </section>
-    <section id="Contact">
-        <div class="ContactHeader">
+    <section id="contact">
+        <div class="contact__text">
             <h2>Write us a letter</h2>
             <h6>We appreciate your ideas</h6>
         </div>
-        <form class="ContactForm" action="thankyou.html" method="GET">
-            <label id="Label" for="name">NAME</label><br />
+        <form class="contactform" action="thankyou.html" method="GET">
+            <label id="label" for="name">NAME</label><br />
             <input type="text" name="name" placeholder="Enter your name"><br /><br />
-            <label id="Label" for="email">EMAIL ADDRESS</label><br />
+            <label id="label" for="email">EMAIL ADDRESS</label><br />
             <input type="text" name="email" placeholder="Enter your email address"><br /><br />
-            <label id="Label" for="message">YOUR MESSAGE</label><br />
-            <textarea name="mesage" placeholder="Example text" cols="30" rows="10"></textarea>
+            <label id="label" for="message">YOUR MESSAGE</label><br />
+            <textarea name="message" placeholder="Example text" cols="30" rows="10"></textarea>
             <br>
-            <button class="ContactButton">Submit</button>
+            <button>Submit</button>
         </form>
     </section>
     <footer>
-        <div class="FooterRow">
-            <div class="FooterColumn">
-                <img id="FooterLogo" src="./images/hipsterlogo_white.png" alt="ABC logo">
+        <div class="footer__row">
+            <div class="footer__column">
+                <img id="footerlogo" src="./images/hipsterlogo_white.png" alt="ABC logo">
             </div>
-            <div class="FooterColumn">
-                <a id="footer-home" href="#MainImage">HOME</a>
-                <a href="#About">ABOUT</a>
-                <a href="#Services">SERVICES</a>
-                <a href="#Portfolio">PORTFOLIO</a>
-                <a href="#Contact">CONTACT</a>
+            <div class="footer__column">
+                <h4><a id="footerhome" href="#mainimage">HOME</a></h4>
+                <a id="footer--text" href="#about">ABOUT</a>
+                <a id="footer--text" href="#services">SERVICES</a>
+                <a id="footer--text" href="#portfolio">PORTFOLIO</a>
+                <a id="footer--text" href="#contact">CONTACT</a>
             </div>
-            <div class="FooterColumn">
+            <div class="footer__column">
                 <h4>ADDRESS</h4>
-                <P class="footer-text">
+                <P class="footer--text">
                 Suite #913
                 <br />
                 Corporation building
@@ -195,9 +195,9 @@
                 M1 1TA
                 </P>
             </div>
-            <div class="FooterColumn">
+            <div class="footer__column">
                 <h4>CONTACT</h4>
-                <p class="footer-text">
+                <p class="footer--text">
                     E: info@youragency.com
                     <br />
                     T: +44 800 123 456
@@ -208,4 +208,4 @@
         </div>
     </footer>    
 </body>
-</html>
+</html> -->
